@startuml
skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

class Name <<(V,#FF8B40)value object>> {}

class FirstName <<(V,#FF8B40)value object>> {}
class LastName <<(V,#FF8B40)value object>> {}
class FullName <<(V,#FF8B40)value object>> {}
class ContactInfo <<(V,#FF8B40)value object>> {}
class Phone <<(V,#FF8B40)value object>> {}
class Email <<(V,#FF8B40)value object>> {}
class Slot <<(V,#FF8B40)value object>> {}
class Date <<(V,#FF8B40)value object>> {}
class TimeInterval <<(V,#FF8B40)value object>> {}
class Function <<(V,#FF8B40)value object>>  {}
class Status <<(V,#FF8B40)value object>> {}

package "<<aggregate Staff>>" {
    entity Staff <<entity>><<root>>{}
    class LicenseNumber <<(V,#FF8B40)value object>> <<identifier>> {}
}

package "<<aggregate Doctor>>" {
    entity Doctor <<entity>><<root>>{}
}
package "<<aggregate Specialization>>"{
    entity Specialization <<entity>> <<root>> {}
    class SpecializationDenomination <<(V,#FF8B40)value object>> <<identifier>> {}
}


package "<<aggregate>> User" {
    entity User <<entity>> <<root>>
    class Username <<(V,#FF8B40) value object>> <<identifier>>
    class Role <<(V,#FF8B40) value object>>
}

User ---> "0..1" Patient
User -> "1" Staff
User -> "1" Status
User --> Username
User ----> Email
User --> Role

Doctor -> "1" Staff : is a

Name --> FirstName
Name -> LastName
Name --> FullName

ContactInfo --> "1" Email
ContactInfo --> "1" Phone
EmergencyContact --> "1" Phone

Staff --> "1" Status
Staff --> "1" Name
Staff --> "1" Function
Staff ---> "1" ContactInfo
Staff --> "1" LicenseNumber
Staff ---> "1..*" Slot
Staff --> "1" Specialization

Specialization --> "1" SpecializationDenomination : defined by
Slot --> "1" Date
Slot --> "1" TimeInterval

@enduml
